# connectDB

./: .gitignore  article.md  postgres.py
ETL/: etl.py  etl_con.py  export.py  pyproject.toml
sql/: apple.py  azure.py  azure_con.py  connect.py  nile.py  pyproject.toml  sqlserver.py
