[tool.poetry]
name = "etl"
version = "0.1.0"
description = "this is trying out ETL"
authors = ["liu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
pypyodbc = "^1.3.6"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
pyodbc = "^4.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
